--- a/index.html
+++ b/index.html
@@ -1,175 +1,179 @@
+<!-- Meta Pixel Code -->
+<script>
+!function(f,b,e,v,n,t,s)
+{
+</script>
+<noscript>
+<
+<!-- End Meta Pixel Code -->
+
 <!DOCTYPE html>
-<html lang="hi">
+<html lang="te">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
-  <title>Danush Matka 🏹 | No.1 Online Matka Platform</title>
-  
-  <script>
-    !function(f,b,e,v,n,t,s)
-    {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-    n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-    if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-    n.queue=[];t=b.createElement(e);t.async=!0;
-    t.src=v;s=b.getElementsByTagName(e)[0];
-    s.parentNode.insertBefore(t,s)}(window, document,'script',
-    'https://connect.facebook.net/en_US/fbevents.js');
-    fbq('init', '1227298749373129'); // Tera Pixel ID
-    fbq('track', 'PageView');
-  </script>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Radhika Trading Telugu</title>
 
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Urbanist:wght@400;700;900&display=swap" rel="stylesheet" />
-  
-  <style>
-    :root {
-      --primary: #003366; /* Royal Blue */
-      --accent: #FFD700;  /* Golden */
-      --danger: #ff0000;
-      --white: #ffffff;
-      --bg: #f0f4f8;
-    }
+<style>
+*{box-sizing:border-box;font-family:Arial,Helvetica,sans-serif}
+body{margin:0;background:#ffffff;color:#111;text-align:center}
 
-    * { margin: 0; padding: 0; box-sizing: border-box; }
-    body { font-family: "Urbanist", sans-serif; background: var(--bg); color: #1a1a1a; }
+.container{
+max-width:420px;
+margin:auto;
+padding:25px 20px;
+}
 
-    /* Hero Section */
-    .hero {
-      min-height: 100vh;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      padding: 20px;
-      background: linear-gradient(135deg, #001f3f 0%, #003366 100%);
-    }
+h1{
+color:#1a73e8;
+margin-bottom:5px;
+font-size:24px;
+}
 
-    .hero-card {
-      background: var(--white);
-      max-width: 600px;
-      width: 100%;
-      border-radius: 30px;
-      padding: 40px 20px;
-      text-align: center;
-      border: 4px solid var(--accent);
-      box-shadow: 0 20px 40px rgba(0,0,0,0.3);
-      position: relative;
-    }
+.timer{
+color:#ff5722;
+font-weight:700;
+margin:12px 0;
+font-size:16px;
+}
 
-    .logo-main {
-      font-size: 3.5rem;
-      font-weight: 900;
-      color: var(--primary);
-      text-transform: uppercase;
-      margin-bottom: 10px;
-      letter-spacing: -2px;
-    }
+.profile{
+width:130px;
+height:130px;
+border-radius:50%;
+border:4px solid #1a73e8;
+margin:20px auto;
+overflow:hidden;
+}
+.profile img{
+width:100%;
+height:100%;
+object-fit:cover;
+}
 
-    .logo-main span { color: var(--danger); }
+.title{
+font-size:20px;
+font-weight:700;
+color:#1a73e8;
+margin-top:10px;
+}
 
-    .tagline { font-size: 1.2rem; font-weight: 700; color: #555; margin-bottom: 30px; }
+.sub{
+font-size:15px;
+margin:10px 0 15px;
+line-height:1.5;
+}
 
-    /* Buttons */
-    .btn {
-      display: block;
-      padding: 18px;
-      margin: 15px auto;
-      border-radius: 50px;
-      text-decoration: none;
-      font-weight: 900;
-      font-size: 1.2rem;
-      transition: 0.3s;
-      width: 90%;
-      text-transform: uppercase;
-    }
+.trust{
+font-size:14px;
+line-height:1.7;
+margin:15px 0;
+text-align:left;
+padding:0 10px;
+}
 
-    .btn-reg {
-      background: linear-gradient(90deg, #ff0000, #b30000);
-      color: white;
-      box-shadow: 0 10px 20px rgba(255, 0, 0, 0.3);
-      border: 2px solid #fff;
-    }
+.btn{
+display:block;
+background:#1a73e8;
+color:#fff;
+padding:15px;
+border-radius:30px;
+text-decoration:none;
+font-weight:700;
+margin:18px 0;
+animation:blink 1.5s infinite;
+transition:0.3s;
+}
 
-    .btn-tg {
-      background: #0088cc;
-      color: white;
-      box-shadow: 0 10px 20px rgba(0, 136, 204, 0.3);
-    }
+.btn:active{
+background:#0b5bd3;
+transform:scale(0.96);
+}
 
-    .btn:hover { transform: translateY(-5px); filter: brightness(1.1); }
+@keyframes blink{
+0%{box-shadow:0 0 0 0 rgba(26,115,232,0.6)}
+70%{box-shadow:0 0 0 12px rgba(26,115,232,0)}
+100%{box-shadow:0 0 0 0 rgba(26,115,232,0)}
+}
 
-    /* Rates Table */
-    .rates-container { padding: 40px 15px; background: #fff; }
-    .section-title { font-size: 2rem; font-weight: 900; margin-bottom: 30px; color: var(--primary); text-align: center; }
-
-    .rate-row {
-      display: flex;
-      justify-content: space-between;
-      padding: 15px;
-      border-bottom: 1px solid #eee;
-      font-weight: 700;
-    }
-
-    .rate-name { color: #333; }
-    .rate-value { color: var(--danger); font-size: 1.2rem; }
-
-    /* Footer */
-    footer { padding: 30px; text-align: center; background: #001f3f; color: #ccc; font-size: 0.9rem; }
-
-    .blink { animation: blinker 1s linear infinite; color: red; font-weight: 900; }
-    @keyframes blinker { 50% { opacity: 0; } }
-  </style>
+.note{
+font-size:12.5px;
+color:#666;
+margin-top:30px;
+padding:15px;
+border-top:1px solid #ddd;
+line-height:1.5;
+}
+</style>
 </head>
+
 <body>
 
-  <section class="hero">
-    <div class="hero-card">
-      <div class="blink">● LIVE UPDATES</div>
-      <h1 class="logo-main">DANUSH <span>MATKA</span></h1>
-      <p class="tagline">India's Most Trusted & Fastest Platform</p>
+<div class="container">
 
-      <a href="https://rajagames7.live/#/register?invitationCode=2055765144101" class="btn btn-reg" onclick="fbq('track', 'CompleteRegistration');">
-        <i class="fas fa-user-plus"></i> Register Now
-      </a>
+<h1>RADHIKA TRADING TELUGU</h1>
 
-      <a href="https://t.me/+Ku1y4JJKhaw5NGQ1" class="btn btn-tg" onclick="fbq('track', 'Contact');">
-        <i class="fab fa-telegram"></i> Join Telegram
-      </a>
+<div class="timer" id="timer">Offer closes in 30 seconds</div>
 
-      <div style="margin-top: 20px; font-size: 0.9rem; color: #666;">
-        💰 Minimum Deposit: ₹100 | ⚡ Instant Payout
-      </div>
-    </div>
-  </section>
+<div class="profile">
+<img src="logo.png" alt="Radhika Trading">
+</div>
 
-  <section class="rates-container">
-    <h2 class="section-title">DANUSH SPECIAL RATES</h2>
-    
-    <div class="rate-row">
-      <span class="rate-name">SINGLE DIGIT</span>
-      <span class="rate-value">10 KA 100</span>
-    </div>
-    <div class="rate-row">
-      <span class="rate-name">JODI DIGIT</span>
-      <span class="rate-value">10 KA 1000</span>
-    </div>
-    <div class="rate-row">
-      <span class="rate-name">SINGLE PANA</span>
-      <span class="rate-value">10 KA 1600</span>
-    </div>
-    <div class="rate-row">
-      <span class="rate-name">DOUBLE PANA</span>
-      <span class="rate-value">10 KA 3200</span>
-    </div>
-    <div class="rate-row" style="background: #fff8e1;">
-      <span class="rate-name">FULL SANGAM</span>
-      <span class="rate-value">10 KA 1,00,000</span>
-    </div>
-  </section>
+<div class="title">Telugu Traders Community</div>
 
-  <footer>
-    <p>© 2026 DANUSH MATKA OFFICIAL</p>
-    <p>Fair Play • Secure • Instant</p>
-  </footer>
+<div class="sub">
+📈 మార్కెట్ మూవ్స్ ని అర్థం చేసుకుని  
+స్మార్ట్ ట్రేడింగ్ నేర్చుకోండి
+</div>
+
+<!-- 🔥 UPPER JOIN BUTTON -->
+<a class="btn"
+href="https://t.me/+ticuLOCFHo05MDA1"
+target="_blank"
+onclick="fbq('track','Lead'); fbq('track','Contact');">
+JOIN NOW FOR FREE<br>
+<span style="font-size:13px;font-weight:400">
+(ఇప్పుడు ఉచితంగా జాయిన్ అవ్వండి)
+</span>
+</a>
+
+<div class="trust">
+✅ 5+ Years Trading Experience<br>
+✅ Daily Telugu Trading Calls<br>
+✅ Proper Risk Management<br>
+✅ Free Learning Community<br>
+✅ Beginner Friendly
+</div>
+
+<!-- 🔥 LOWER JOIN BUTTON -->
+<a class="btn"
+href="https://t.me/+ticuLOCFHo05MDA1"
+target="_blank"
+onclick="fbq('track','Lead'); fbq('track','Contact');">
+JOIN NOW FOR FREE<br>
+<span style="font-size:13px;font-weight:400">
+(ఇప్పుడు ఉచితంగా జాయిన్ అవ్వండి)
+</span>
+</a>
+
+<div class="note">
+Disclaimer: ఇది విద్యాపరమైన సమాచారం మాత్రమే.  
+ట్రేడింగ్ లో లాభనష్టాలు ఉండవచ్చు.  
+We do not provide guaranteed profits.
+</div>
+
+</div>
+
+<script>
+let sec = 30;
+setInterval(()=>{
+  document.getElementById("timer").innerText =
+  "Offer closes in " + sec + " seconds";
+  sec--;
+  if(sec < 0) sec = 30;
+},1000);
+</script>
 
 </body>
 </html>
+
