--- a/index.html
+++ b/index.html
@@ -1,108 +1,86 @@
-<!-- Meta Pixel Code -->
-<script>
-!function(f,b,e,v,n,t,s)
-{
-</script>
-<noscript>
-<
-<!-- End Meta Pixel Code -->
-
 <!DOCTYPE html>
-<html lang="te">
+<html>
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Radhika Trading Telugu</title>
+<title>Radhika Trader</title>
 
 <style>
-*{box-sizing:border-box;font-family:Arial,Helvetica,sans-serif}
-body{margin:0;background:#ffffff;color:#111;text-align:center}
+body{
+margin:0;
+background:#f2f2f2;
+font-family:Arial, sans-serif;
+text-align:center;
+}
 
 .container{
 max-width:420px;
 margin:auto;
-padding:25px 20px;
+padding:20px;
 }
 
-h1{
-color:#1a73e8;
-margin-bottom:5px;
-font-size:24px;
+.card{
+background:white;
+padding:20px;
+border-radius:20px;
+box-shadow:0 5px 20px rgba(0,0,0,0.1);
 }
 
-.timer{
-color:#ff5722;
-font-weight:700;
-margin:12px 0;
-font-size:16px;
+.topbtn{
+background:#f4b400;
+padding:14px;
+border-radius:12px;
+font-weight:bold;
+margin-bottom:20px;
 }
 
 .profile{
-width:130px;
-height:130px;
+width:150px;
+height:150px;
 border-radius:50%;
-border:4px solid #1a73e8;
-margin:20px auto;
+border:6px solid #f4b400;
+margin:auto;
 overflow:hidden;
 }
+
 .profile img{
 width:100%;
 height:100%;
 object-fit:cover;
 }
 
-.title{
-font-size:20px;
-font-weight:700;
-color:#1a73e8;
+h2{
+color:#d4a017;
+margin:15px 0 5px;
+}
+
+.points{
+background:#f5ecd7;
+padding:12px;
+border-radius:12px;
+margin:10px 0;
+font-weight:bold;
+}
+
+.joinbtn{
+background:#f4b400;
+padding:15px;
+border-radius:12px;
+font-weight:bold;
+margin-top:15px;
+cursor:pointer;
+}
+
+.timer{
+margin-top:15px;
+color:red;
+font-weight:bold;
+}
+
+.number{
 margin-top:10px;
-}
-
-.sub{
-font-size:15px;
-margin:10px 0 15px;
-line-height:1.5;
-}
-
-.trust{
-font-size:14px;
-line-height:1.7;
-margin:15px 0;
-text-align:left;
-padding:0 10px;
-}
-
-.btn{
-display:block;
-background:#1a73e8;
-color:#fff;
-padding:15px;
-border-radius:30px;
-text-decoration:none;
-font-weight:700;
-margin:18px 0;
-animation:blink 1.5s infinite;
-transition:0.3s;
-}
-
-.btn:active{
-background:#0b5bd3;
-transform:scale(0.96);
-}
-
-@keyframes blink{
-0%{box-shadow:0 0 0 0 rgba(26,115,232,0.6)}
-70%{box-shadow:0 0 0 12px rgba(26,115,232,0)}
-100%{box-shadow:0 0 0 0 rgba(26,115,232,0)}
-}
-
-.note{
-font-size:12.5px;
-color:#666;
-margin-top:30px;
-padding:15px;
-border-top:1px solid #ddd;
-line-height:1.5;
+font-size:22px;
+font-weight:bold;
 }
 </style>
 </head>
@@ -110,70 +88,54 @@ line-height:1.5;
 <body>
 
 <div class="container">
+<div class="card">
 
-<h1>RADHIKA TRADING TELUGU</h1>
-
-<div class="timer" id="timer">Offer closes in 30 seconds</div>
+<div class="topbtn">JOIN TELEGRAM CHANNEL</div>
 
 <div class="profile">
-<img src="logo.png" alt="Radhika Trading">
+<img src="radhika.jpg" alt="Radhika Trader">
 </div>
 
-<div class="title">Telugu Traders Community</div>
+<h2>👑 Radhika Trader 👑</h2>
+<p>⚡ ✅ 95% HIGH ACCURACY ✅ Best Trading Expert ⚡</p>
 
-<div class="sub">
-📈 మార్కెట్ మూవ్స్ ని అర్థం చేసుకుని  
-స్మార్ట్ ట్రేడింగ్ నేర్చుకోండి
+<div class="points">📊 Learn New Skills ✅</div>
+<div class="points">🤝 💎 DAILY PROFIT GUARANTEE 💎 🤝</div>
+<div class="points">⚡ INTRA DAY OPTION TRADERS 📊 ⚡</div>
+<div class="points">📚 14 Years Experience in Share Market 📚</div>
+
+<div class="joinbtn" onclick="redirectNow()">
+JOIN TELEGRAM CHANNEL
 </div>
 
-<!-- 🔥 UPPER JOIN BUTTON -->
-<a class="btn"
-href="https://t.me/+ticuLOCFHo05MDA1"
-target="_blank"
-onclick="fbq('track','Lead'); fbq('track','Contact');">
-JOIN NOW FOR FREE<br>
-<span style="font-size:13px;font-weight:400">
-(ఇప్పుడు ఉచితంగా జాయిన్ అవ్వండి)
-</span>
-</a>
-
-<div class="trust">
-✅ 5+ Years Trading Experience<br>
-✅ Daily Telugu Trading Calls<br>
-✅ Proper Risk Management<br>
-✅ Free Learning Community<br>
-✅ Beginner Friendly
+<div class="timer" id="timer">
+Radhika Offer closes in 15 seconds
 </div>
 
-<!-- 🔥 LOWER JOIN BUTTON -->
-<a class="btn"
-href="https://t.me/+ticuLOCFHo05MDA1"
-target="_blank"
-onclick="fbq('track','Lead'); fbq('track','Contact');">
-JOIN NOW FOR FREE<br>
-<span style="font-size:13px;font-weight:400">
-(ఇప్పుడు ఉచితంగా జాయిన్ అవ్వండి)
-</span>
-</a>
+<div class="number">2</div>
 
-<div class="note">
-Disclaimer: ఇది విద్యాపరమైన సమాచారం మాత్రమే.  
-ట్రేడింగ్ లో లాభనష్టాలు ఉండవచ్చు.  
-We do not provide guaranteed profits.
 </div>
-
 </div>
 
 <script>
-let sec = 30;
-setInterval(()=>{
-  document.getElementById("timer").innerText =
-  "Offer closes in " + sec + " seconds";
-  sec--;
-  if(sec < 0) sec = 30;
+let seconds = 15;
+let link = "https://t.me/+ticuLOCFHo05MDA1";
+
+let countdown = setInterval(function(){
+seconds--;
+document.getElementById("timer").innerHTML =
+"Radhika Offer closes in " + seconds + " seconds";
+
+if(seconds <= 0){
+clearInterval(countdown);
+window.location.href = link;
+}
 },1000);
+
+function redirectNow(){
+window.location.href = link;
+}
 </script>
 
 </body>
 </html>
-
