--- a/index.html
+++ b/index.html
@@ -5,6 +5,26 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Radhika Trader</title>
 
+<!-- Meta Pixel Code -->
+<script>
+!function(f,b,e,v,n,t,s)
+{if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+n.queue=[];t=b.createElement(e);t.async=!0;
+t.src=v;s=b.getElementsByTagName(e)[0];
+s.parentNode.insertBefore(t,s)}(window, document,'script',
+'https://connect.facebook.net/en_US/fbevents.js');
+
+fbq('init', '2349685902204160');
+fbq('track', 'PageView');
+</script>
+<noscript>
+<img height="1" width="1" style="display:none"
+src="https://www.facebook.com/tr?id=2349685902204160&ev=PageView&noscript=1"/>
+</noscript>
+<!-- End Meta Pixel Code -->
+
 <style>
 body{
 margin:0;
@@ -32,6 +52,7 @@ padding:14px;
 border-radius:12px;
 font-weight:bold;
 margin-bottom:20px;
+cursor:pointer;
 }
 
 .profile{
@@ -76,12 +97,6 @@ margin-top:15px;
 color:red;
 font-weight:bold;
 }
-
-.number{
-margin-top:10px;
-font-size:22px;
-font-weight:bold;
-}
 </style>
 </head>
 
@@ -90,7 +105,9 @@ font-weight:bold;
 <div class="container">
 <div class="card">
 
-<div class="topbtn">JOIN TELEGRAM CHANNEL</div>
+<div class="topbtn" onclick="redirectNow()">
+JOIN TELEGRAM CHANNEL
+</div>
 
 <div class="profile">
 <img src="radhika.jpg" alt="Radhika Trader">
@@ -112,28 +129,36 @@ JOIN TELEGRAM CHANNEL
 Radhika Offer closes in 15 seconds
 </div>
 
-<div class="number">2</div>
-
 </div>
 </div>
 
 <script>
 let seconds = 15;
-let link = "https://t.me/+ticuLOCFHo05MDA1";
+let redirected = false;
+let link = "https://t.me/+fINu07Lt19VlZmI1";   // ✅ NEW PRIVATE LINK
 
 let countdown = setInterval(function(){
+
+if(redirected) return;
+
 seconds--;
+
 document.getElementById("timer").innerHTML =
 "Radhika Offer closes in " + seconds + " seconds";
 
 if(seconds <= 0){
+redirected = true;
 clearInterval(countdown);
-window.location.href = link;
+window.location.replace(link);
 }
+
 },1000);
 
 function redirectNow(){
-window.location.href = link;
+if(!redirected){
+redirected = true;
+window.location.replace(link);
+}
 }
 </script>
 
